<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yokke Android</string>
    <string name="welcome">Welcome !</string>
    <string name="choose_payment">Choose Payment Method</string>
    <string name="date">Sunday, 12 12 2021</string>
    <string name="main">Main</string>
    <string name="transaction">Transaction</string>
    <string name="initialize">Initialize</string>
    <string name="dip_card">Dip Your Card</string>
    <string name="tap_card">Tap Your Card</string>
    <string name="pay_with_qr">Pay With QR</string>
    <string name="initialize_device">Initialize Device</string>
    <string name="transaction_menu">Transaction Menu</string>
    <string name="void_icon">Void</string>
    <string name="settlement_icon">Settlement</string>
    <string name="initialize_btn">Initialize This Device</string>
    <string name="card_cost_hint">Please input correct cost amount</string>

    <string name="emv_app_select">Please select app</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!--keyboard number-->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>
    <string name="num_back">&#060;</string>
    <string name="num_cancel_str">&#215;</string>
    <string name="num_ok_str">OK</string>

    <string name="print_id">Test Android Yokke \n MCC \n Jakarta</string>
    <string name="print_num_card">**** ***** ***** 0285</string>
    <string name="print_tid">TID:73011233</string>
    <string name="print_mid">MID:7100243621</string>
    <string name="print_sale">sale</string>
    <string name="print_batch">batch:000002</string>
    <string name="print_trace">trace No:000118</string>
    <string name="print_date">date:22/11/2021</string>
    <string name="print_time">Time:14:20:22</string>
    <string name="print_reffNo">Reff No:132614584851</string>
    <string name="print_appr">appr code:062981</string>
    <string name="print_signature">NO SIGNATURE REQUIRED \n ** MERCHANT COPY **</string>
    <string name="qr_berakhir">Kode QR berakhir dalam</string>
    <string name="dialog_trans_succ_liff"><xliff:g id="SUCCESS">%1$s</xliff:g> Success</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tartun">Tarik Tunai</string>
    <string name="refund">Refund</string>
    <string name="powerBuy">Power buy</string>
    <string name="prep_emoney">Prepaid \n E-money</string>
    <string name="prep_brizzi">Prepaid \n Brizzi</string>
    <string name="prepaid_tapcash">Prepaid \n Tapcash</string>
    <string name="options_4">4 Options</string>
    <string name="options_5">5 Options</string>
    <string name="options_3">3 Options</string>
    <string name="btn_sale">Sale</string>
    <string name="btn_qris">QRIS</string>
    <string name="reports">Reports</string>
    <string name="reprint">Reprint</string>
    <string name="merpan">Merchant PAN : 9360000080100024362</string>
    <string name="please_qris">Please scan QRIS code below to pay</string>
    <string name="admin">Admin</string>

    <string name="err_undefine_info">Undefined</string>
    <string name="print_qriS">Print \nQRIS</string>
    <string name="last_trx_status">Last TRX \nStatus</string>
    <string name="any_trx_status">Any TRX \nStatus</string>
    <string name="refundqr">Refund</string>
    <string name="any_trx_history">Any TRX History</string>

    <string name="nama_acquirer">Nama Acquirer : </string>
    <string name="tv_DateStrukQr">Date: 05/01/2022</string>
    <string name="merc_panQr">Merc PAN: </string>
    <string name="uob">UOB</string>
    <string name="reff_id">Reff Id \t\t\t\t\t: </string>
    <string name="customer_pan">Customer PAN \t\t: </string>
    <string name="name_cust">Nama Customer \t\t: </string>
    <string name="status_transaksi">Status Transaksi \t: </string>
    <string name="tip_qr">TIP \t\t\t\t\t\t: </string>
    <string name="nominal_qr">Nominal \t\t\t\t: </string>
    <string name="cust_copy">\t\t\t\t** Customer Copy **</string>
    <string name="total_amount">Total Amount</string>

    <string name="exit_app">Exit Current APP?</string>
    <string name="err_password">Wrong Password!</string>
    <string name="dialog_cancel">Cancel</string>

</resources>