<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearStrukQr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivYokke"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:src="@drawable/yokke_print"/>
        <TextView
            android:id="@+id/print_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/arialnarrowbold"
            android:text="@string/print_id"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tvTid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="start"
                android:text="@string/print_tid"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="end"
                android:text="@string/print_mid"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="start"
                android:text="@string/print_date"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="end"
                android:text="@string/print_time"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tvReffNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="start"
                android:text="@string/print_reffNo"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tvMpan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/arialnarrowbold"
                android:gravity="start"
                android:text="@string/merpan"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="vertical"
            android:paddingTop="0dp">
            <View
                android:id="@+id/garis1"
                android:layout_width="420dp"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layout_marginBottom="@dimen/sp_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_qris"
                android:fontFamily="@font/montserrat_500"
                android:textColor="@color/black"
                android:gravity="center"/>

            <View
                android:id="@+id/garis2"
                android:layout_width="420dp"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layout_marginTop="@dimen/sp_10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/space_horizontal"
            android:layout_marginEnd="@dimen/space_horizontal"
            android:orientation="vertical"
            android:paddingTop="0dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/qris_logo"/>
            <ImageView
                android:id="@+id/ivQris"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/qris_print"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="NMID : ID102003233686"
                android:fontFamily="@font/montserrat_500"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
            <View
                android:id="@+id/garis3"
                android:layout_width="420dp"
                android:layout_height="2dp"
                android:background="@drawable/dotted"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>